# Pico-TD

./: Cargo.toml  README.md  README.ru.md
android/: .gitignore  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/ru/kicshikxo/pico_td/: MainActivity.java
android/app/src/main/res/values/: colors.xml  themes.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
assets/levels/: coastal_highway.ron  example.ron  highway.ron  ring.ron  zigzag.ron
assets/levels/compain/: example.ron  forest.ron  ring.ron  zig-zag.ron
locales/: error.yaml  levels.yaml  ui.yaml
src/: audio.rs  game.rs  input.rs  main.rs  pico_td.rs  player.rs  waves.rs
src/assets/: levels.rs  mod.rs  ui.rs
src/assets/audio/: game.rs  ui.rs
src/assets/entities/: tile.rs
src/assets/sprites/: entity.rs  mod.rs  tile.rs  tilemap.rs  ui.rs
src/entities/: entity_shadow.rs  mod.rs  projectile.rs  structure.rs
src/entities/enemy/: health.rs  health_bar.rs  mod.rs
src/entities/projectile/: mod.rs  movement.rs
src/entities/soldier/: cooldown_bar.rs  cooldown_indicator.rs  fire_radius.rs  mod.rs  projectile.rs
src/entities/structure/: cooldown_indicator.rs  mod.rs  projectile.rs
src/entities/tile/: indicator.rs  mod.rs  movement.rs  position.rs  sprite.rs
src/entities/tilemap/: mod.rs  movement.rs  position.rs  tile.rs
src/entities/unit/: health.rs  health_bar.rs  mod.rs
src/game/: audio.rs  camera.rs  config.rs  input.rs  mod.rs  player.rs  speed.rs  waves.rs
src/game/assets/: fonts.rs  levels.rs  mod.rs  utils.rs
src/game/assets/audio/: game.rs  ui.rs
src/game/assets/images/: tilemap.rs  ui.rs
src/game/assets/sprites/: entity.rs  tilemap.rs  ui.rs
src/game/entities/: mod.rs
src/game/entities/enemy/: config.rs  health.rs  health_bar.rs  mod.rs  path.rs
src/game/entities/soldier/: config.rs  cooldown_indicator.rs  fire_radius.rs  mod.rs  projectile.rs  projectile_blast.rs
src/game/entities/tile/: indicator.rs  mod.rs  movement.rs  position.rs  sprite.rs
src/game/entities/tilemap/: mod.rs  tile.rs
src/game/locales/: enemy.yaml  error.yaml  levels.yaml  soldier.yaml  ui.yaml
src/game/meshes/: annular_segment.rs  mod.rs  rounded_rectangle.rs
src/game/ui/: i18n.rs  mod.rs
src/game/ui/components/: button.rs  container.rs  icon.rs  mod.rs  selector.rs  text.rs
src/game/ui/views/: game_over.rs  in_game.rs  level_select.rs  menu.rs  mod.rs  pause.rs  settings.rs  soldier_info.rs  soldier_placement_confirm.rs  soldier_placement_confirmation.rs  soldier_select.rs
src/locales/: levels.yaml  ui.yaml
src/ui/: i18n.rs  mod.rs
src/ui/components/: button.rs  container.rs  mod.rs  selector.rs  text.rs
src/ui/views/: game_over.rs  in_game.rs  level_select.rs  menu.rs  mod.rs  pause.rs  settings.rs  soldier_info.rs  soldier_select.rs  structure_info.rs  structure_select.rs
src/utils/: meshes.rs
wasm/: index.html  style.css
