[package]
name = "pico_td"
version = "1.0.0"
edition = "2021"
license = "WTFPL"
build = "build/build.rs"

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "bevy_ui",
    "bevy_window",
    "multi_threaded",
    "vorbis",
    "webgl2",
    "x11",
] }
rand = { version = "0.9.0" }
ron = { version = "0.8.1" }
serde = { version = "1.0.219" }

bevy_asset_loader = { version = "0.22.0", features = ["2d"] }
bevy_embedded_assets = { version = "0.12.0" }

rust-i18n = { version = "3.1.3" }
sys-locale = { version = "0.3.2", features = ["js"] }

bevy-persistent = { version = "0.7.0", features = ["ron"] }
directories = { version = "6.0.0" }

rfd = { version = "0.15.2", default-features = false, features = ["gtk3"] }
log = { version = "0.4.26", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
winit = { version = "0.30.9", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.1", features = ["wasm_js"] }

[build-dependencies]
embed-resource = { version = "3.0.2" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
