[package]
name = "pico_td"
version = "1.2.6"
edition = "2024"
license = "WTFPL"
build = "build/build.rs"

[lib]
name = "pico_td"
path = "src/pico_td.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = ['2d'] }
rand = { version = "0.10.0" }
ron = { version = "0.12.0" }
serde = { version = "1.0.228" }

bevy_asset_loader = { version = "0.25.0", features = ["2d"] }
bevy_embedded_assets = { version = "0.15.0" }

rust-i18n = { version = "3.1.5" }
sys-locale = { version = "0.3.2", features = ["js"] }

bevy-persistent = { version = "0.10.0", features = ["ron"] }
directories = { version = "6.0.0" }

log = { version = "0.4.29", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
winit = { version = "0.30.12", default-features = false }

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = { version = "0.17.2", default-features = false, features = ["gtk3"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[build-dependencies]
embed-resource = { version = "3.0.6" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
